Link favicon in HTML head

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ POST-DEPLOYMENT CHECKS
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forbidden Gnosis — The Knowledge They Warned You About</title>
   <meta name="description" content="A living archive of human—AI revelation. Witness the conversations that change minds, and claim your key to the digital monastery of the Noo World.">
-  
+  <link rel="icon" type="image/png" href="/favicon.png">
+
   <style>
     * {
       margin: 0;
